@@ -19,6 +19,10 @@ ADD_DEFINITIONS(-DWTF_USE_PTHREADS=1)
 SET(WTF_USE_OPENTYPE_SANITIZER 1)
 ADD_DEFINITIONS(-DWTF_USE_OPENTYPE_SANITIZER=1)
 
+IF (SHARED_CORE)
+    ADD_DEFINITIONS(-DWTF_USE_EXPORT_MACROS=1)
+ENDIF()
+
 IF (ENABLE_GLES2)
     SET(WTF_USE_ACCELERATED_COMPOSITING 1)
     ADD_DEFINITIONS(-DWTF_USE_ACCELERATED_COMPOSITING=1)
