@@ -1,3 +1,15 @@
+2012-10-10  Yong Li  <yoli@rim.com>
+
+        [BlackBerry] Define WTF_USE_EXTRA_MACROS in cmake rather than Platform.h
+        https://bugs.webkit.org/show_bug.cgi?id=98819
+
+        Reviewed by Rob Buis.
+
+        And make it depend on SHARED_CORE
+        RIM PR# 221339.
+
+        * wtf/Platform.h:
+
 2012-10-09  Filip Pizlo  <fpizlo@apple.com>
 
         JSC should infer when indexed storage is contiguous, and optimize for it
